[project]
name = "csc126final"
version = "0.1.0"
description = "Aerial Drone Surveillance System with YOLOv8"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.123.0",
    "uvicorn[standard]>=0.38.0",
    "ultralytics>=8.0.0",
    "opencv-python>=4.8.0",
    "cvzone>=1.6.1",
]
